# memograph

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  plan.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/db/: minio_client.py  neo4j_driver.py  seed.py
backend/app/events/: router.py  schemas.py  service.py
backend/app/graph/: router.py  schemas.py  service.py
backend/app/health/: router.py
backend/app/images/: router.py  schemas.py  service.py  storage.py
backend/app/people/: router.py  schemas.py  service.py
backend/app/places/: router.py  schemas.py  service.py
backend/app/relationships/: router.py  schemas.py  service.py
backend/app/search/: router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/auth/: test_list_users.py  test_login.py  test_register.py  test_update_user.py
backend/tests/events/: test_crud.py  test_held_at.py
backend/tests/graph/: test_graph.py  test_neighborhood.py
backend/tests/images/: conftest.py  test_associations.py  test_count.py  test_crud.py  test_cursor.py  test_detail.py  test_download.py  test_list.py  test_tags.py  test_update.py
backend/tests/people/: test_attended.py  test_born_at.py  test_crud.py  test_events.py  test_places.py
backend/tests/places/: test_crud.py
backend/tests/relationships/: test_crud.py
backend/tests/search/: test_search.py
frontend/: DESIGN.md  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  events.ts  graph.ts  images.ts  people.ts  places.ts  relationships.ts  search.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useEvents.ts  useGraph.ts  useImages.ts  usePeople.ts  usePlaces.ts  useRelationships.ts  useSearch.ts  (+1 more)
(+15 files in other folders)
